# documentation_with_mkdocs

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: documentation.md
documentation_with_mkdocs/: script_test.py
